--- a/index.html
+++ b/index.html
@@ -1,2 +1,141 @@
-<h1>Coming soon...</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Engineering Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f9f9f9;
+        }
+
+        header {
+            background: #111;
+            color: white;
+            padding: 60px 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            font-size: 40px;
+            margin-bottom: 10px;
+        }
+
+        nav {
+            background: #333;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-size: 18px;
+        }
+
+        .section {
+            padding: 40px 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+
+        .skills, .projects {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .card {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        footer {
+            background: #111;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            margin-top: 40px;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Dawit Haile</h1>
+    <p>Test Engineer | Automation | Python | QA Specialist</p>
+</header>
+
+<nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+</nav>
+
+<section id="about" class="section">
+    <h2>About Me</h2>
+    <p>I am a Test Engineer specializing in automation, manual testing, and QA processes.
+       I work with Python, Selenium, API Testing, CI/CD pipelines, and performance testing tools.</p>
+</section>
+
+<section id="skills" class="section">
+    <h2>Skills</h2>
+    <div class="skills">
+        <div class="card">
+            <h3>Automation</h3>
+            <p>Selenium, Playwright, Cypress, PyTest</p>
+        </div>
+        <div class="card">
+            <h3>API & Backend Testing</h3>
+            <p>Postman, RestAssured, Python Requests</p>
+        </div>
+        <div class="card">
+            <h3>DevOps</h3>
+            <p>GitHub Actions, Docker</p>
+        </div>
+        <div class="card">
+            <h3>Tools</h3>
+            <p>Jira, TestRail, Jenkins, Git</p>
+        </div>
+    </div>
+</section>
+
+<section id="projects" class="section">
+    <h2>Projects</h2>
+    <div class="projects">
+        <div class="card">
+            <h3>Automated Web Testing Framework</h3>
+            <p>Built using Selenium + PyTest with reporting and CI/CD.</p>
+            <a href="#">View on GitHub</a>
+        </div>
+        <div class="card">
+            <h3>API Testing Automation</h3>
+            <p>Automated APIs using Python Requests and JSON schema validation.</p>
+            <a href="#">View on GitHub</a>
+        </div>
+    </div>
+</section>
+
+<section id="contact" class="section">
+    <h2>Contact</h2>
+    <p>Email: your.email@example.com</p>
+    <p>LinkedIn: linkedin.com/in/yourprofile</p>
+    <p>GitHub: github.com/yourname</p>
+</section>
+
+<footer>
+    © 2025 Dawit Haile — Test Engineering Portfolio
+</footer>
+
+</body>
+</html>
+
+
 
