--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
-<h1>Coming soon...</h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Dawit Beyene — Test Engineer</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header class="hero">
+    <div class="container">
+      <div class="hero-left">
+        <h1>Dawit Beyene</h1>
+        <p class="sub">Senior Test Engineer • Test Analyst • Automation Specialist</p>
+
+        <p class="summary">
+          ISTQB **Advanced Level Test Analyst** certified Test Engineer with extensive experience in 
+          functional testing, test design techniques, automation, API testing, and gaming system verification.  
+          MSc in Geoinformatics and strong technical foundation in Python, Selenium, CI/CD, and data-driven testing.
+        </p>
+
+        <div class="cta">
+          <a class="btn" href="/mnt/data/CV - Dawit Beyene.pdf" target="_blank">Download CV</a>
+          <a class="btn ghost" href="#projects">View Projects</a>
+        </div>
+      </div>
+
+      <div class="hero-right">
+        <div class="card contact-card">
+          <h4>Contact</h4>
+          <p><strong>Email</strong><br>dawithaile225@gmail.com</p>
+          <p><strong>Location</strong><br>Velsen-Noord, Netherlands</p>
+          <p><strong>LinkedIn</strong><br>
+            <a href="http://www.linkedin.com/in/dawit-haile-beyene" target="_blank">
+              dawit-haile-beyene
+            </a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <nav class="sticky">
+    <div class="container nav-inner">
+      <a class="logo" href="#">Dawit</a>
+      <div class="links">
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#experience">Experience</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+  </nav>
+
+  <main>
+    <section id="about" class="container section">
+      <h2>About</h2>
+      <p>
+        I am a Test Engineer and ISTQB Advanced Level Test Analyst certified professional with a strong background in test
+        analysis, risk-based testing, test case design techniques, automation, and structured problem solving.  
+        I specialize in testing gaming systems, embedded systems, and web applications using both manual and automated  
+        approaches. My work focuses on delivering reliable, compliant, and high-quality software.
+      </p>
+    </section>
+
+    <section id="skills" class="container section">
+      <h2>Core Skills</h2>
+      <div class="grid">
+
+        <div class="card">
+          <h3>Advanced Testing Expertise</h3>
+          <p>ISTQB Advanced Test Analyst, Black-box techniques, risk-based testing, requirement analysis, defect classification.</p>
+        </div>
+
+        <div class="card">
+          <h3>Test Automation</h3>
+          <p>Selenium, Playwright, PyTest, data-driven and keyword-driven test frameworks.</p>
+        </div>
+
+        <div class="card">
+          <h3>API & Backend Testing</h3>
+          <p>Postman, Python Requests, schema validation, test data creation, REST API validation.</p>
+        </div>
+
+        <div class="card">
+          <h3>Tools & DevOps</h3>
+          <p>Jira, TestRail, GitHub Actions, Docker, Jenkins.</p>
+        </div>
+
+        <div class="card">
+          <h3>Programming & Databases</h3>
+          <p>Python, C++, SQL, PostgreSQL.</p>
+        </div>
+
+      </div>
+    </section>
+
+    <section id="projects" class="container section">
+      <h2>Selected Projects</h2>
+      <div class="grid">
+        <article class="project card">
+          <h3>Automated Web Testing Framework</h3>
+          <p>
+            Created a robust Selenium + PyTest automation framework with HTML reporting, parametrized tests,
+            and GitHub Actions CI integration.
+          </p>
+          <a href="https://github.com/YOUR_GITHUB_REPO" target="_blank">View on GitHub ↗</a>
+        </article>
+
+        <article class="project card">
+          <h3>API Testing Automation</h3>
+          <p>
+            Designed automated API test suite using Python Requests, schema validation,  
+            negative/positive testing, and CI gating.
+          </p>
+          <a href="https://github.com/YOUR_GITHUB_REPO" target="_blank">View on GitHub ↗</a>
+        </article>
+
+        <article class="project card">
+          <h3>Geospatial Workflow Automation (MSc Thesis)</h3>
+          <p>
+            Thesis: “A Method for Enhancing the Reproducibility of Geoprocessing Workflows using Semantic Annotation”.
+          </p>
+        </article>
+      </div>
+    </section>
+
+    <section id="experience" class="container section">
+      <h2>Experience</h2>
+
+      <div class="timeline">
+        <div class="item">
+          <h4>Test Engineer — Gamin
+
+
