--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="hero-left">
         <h1>Dawit Beyene</h1>
-        <p class="sub">Senior Test Engineer • Test Analyst • Automation Specialist</p>
+        <p class="sub">Test Engineer • Test Analyst • Automation Specialist</p>
 
         <p class="summary">
           ISTQB **Advanced Level Test Analyst** certified Test Engineer with extensive experience in 
@@ -132,6 +132,76 @@
 
       <div class="timeline">
         <div class="item">
-          <h4>Test Engineer — Gamin
+          <h4>Test Engineer — Gaming Laboratories International (GLI)</h4>
+          <p><em>2021 — Present</em></p>
+          <p>
+            Responsible for functional testing, test execution, regulatory compliance verification,
+            test documentation, and defect reporting for gaming systems and embedded devices.
+          </p>
+        </div>
 
+        <div class="item">
+          <h4>Graduate Assistant Lecturer — Woldia University</h4>
+          <p><em>2017 — 2019</em></p>
+          <p>
+            Taught programming and information systems courses; supervised lab sessions and student projects.
+          </p>
+        </div>
+      </div>
 
+    </section>
+
+    <section id="contact" class="container section">
+      <h2>Contact</h2>
+
+      <div class="contact-grid">
+        <!-- Static-site contact form → uses Formspree -->
+        <form id="contactForm"
+              action="https://formspree.io/f/YOUR_FORMSPREE_ID"
+              method="POST"
+              class="card form">
+
+          <label>
+            <span>Name</span>
+            <input type="text" name="name" required>
+          </label>
+
+          <label>
+            <span>Email</span>
+            <input type="email" name="email" required>
+          </label>
+
+          <label>
+            <span>Message</span>
+            <textarea name="message" rows="6" required></textarea>
+          </label>
+
+          <input type="hidden" name="_subject" value="New Portfolio Contact Request">
+
+          <button type="submit" class="btn">Send Message</button>
+        </form>
+
+        <div class="card">
+          <h4>Or reach me directly</h4>
+          <p><strong>Email</strong><br>dawithaile225@gmail.com</p>
+          <p><strong>Phone</strong><br>+31 6 87 38 13 98</p>
+
+          <p><strong>CVs</strong><br>
+            <a href="/mnt/data/CV - Dawit Beyene.pdf" target="_blank">CV - Dawit Beyene.pdf</a><br>
+            <a href="/mnt/data/Dawit - CV.pdf" target="_blank">Dawit - CV.pdf</a>
+          </p>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 Dawit Beyene — Test Engineering Portfolio</p>
+    </div>
+  </footer>
+
+  <script src="contact.js"></script>
+</body>
+</html>
