--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Dawit Beyene — Test Engineer</title>
+  <title>Dawit Beyene — Test Engineer & Test Analyst</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <header class="hero">
+
+  <!-- HERO -->
+  <header class="hero fade-in">
     <div class="container">
       <div class="hero-left">
         <h1>Dawit Beyene</h1>
-        <p class="sub">Test Engineer • Test Analyst • Automation Specialist</p>
+        <p class="sub">Senior Test Engineer • ISTQB Advanced Test Analyst</p>
 
         <p class="summary">
-          ISTQB **Advanced Level Test Analyst** certified Test Engineer with extensive experience in 
-          functional testing, test design techniques, automation, API testing, and gaming system verification.  
-          MSc in Geoinformatics and strong technical foundation in Python, Selenium, CI/CD, and data-driven testing.
+          ISTQB <strong>Advanced Level Test Analyst</strong> certified Test Engineer with extensive experience in
+          functional testing, test design techniques, automation, API validation, and end-to-end quality processes.
+          Skilled in Selenium, Playwright, PyTest, risk-based testing, and CI/CD automation. Passionate about delivering
+          reliable, compliant, and high-quality software.
         </p>
 
         <div class="cta">
@@ -25,22 +28,10 @@
           <a class="btn ghost" href="#projects">View Projects</a>
         </div>
       </div>
-
-      <div class="hero-right">
-        <div class="card contact-card">
-          <h4>Contact</h4>
-          <p><strong>Email</strong><br>dawithaile225@gmail.com</p>
-          <p><strong>Location</strong><br>Velsen-Noord, Netherlands</p>
-          <p><strong>LinkedIn</strong><br>
-            <a href="http://www.linkedin.com/in/dawit-haile-beyene" target="_blank">
-              dawit-haile-beyene
-            </a>
-          </p>
-        </div>
-      </div>
     </div>
   </header>
 
+  <!-- NAV -->
   <nav class="sticky">
     <div class="container nav-inner">
       <a class="logo" href="#">Dawit</a>
@@ -55,41 +46,47 @@
   </nav>
 
   <main>
-    <section id="about" class="container section">
+
+    <!-- ABOUT -->
+    <section id="about" class="container section fade-in">
       <h2>About</h2>
       <p>
-        I am a Test Engineer and ISTQB Advanced Level Test Analyst certified professional with a strong background in test
-        analysis, risk-based testing, test case design techniques, automation, and structured problem solving.  
-        I specialize in testing gaming systems, embedded systems, and web applications using both manual and automated  
-        approaches. My work focuses on delivering reliable, compliant, and high-quality software.
+        I am a detail-oriented Test Engineer with ISTQB Advanced Level Test Analyst certification. I specialize in
+        functional testing, test design, risk-based testing, automation development, and test documentation. I have
+        strong experience testing gaming systems, embedded platforms, and web applications using both manual and automated approaches.  
+        MSc in Geoinformatics and BSc in Computer Science.
       </p>
     </section>
 
-    <section id="skills" class="container section">
+    <!-- SKILLS -->
+    <section id="skills" class="container section fade-in">
       <h2>Core Skills</h2>
       <div class="grid">
 
-        <div class="card">
+        <div class="card fade-in">
           <h3>Advanced Testing Expertise</h3>
-          <p>ISTQB Advanced Test Analyst, Black-box techniques, risk-based testing, requirement analysis, defect classification.</p>
+          <p>
+            ISTQB Advanced Test Analyst, black-box techniques, test design, requirement analysis,
+            defect classification, quality risk assessment.
+          </p>
         </div>
 
-        <div class="card">
+        <div class="card fade-in fade-delay">
           <h3>Test Automation</h3>
-          <p>Selenium, Playwright, PyTest, data-driven and keyword-driven test frameworks.</p>
+          <p>Selenium, Playwright, PyTest, data-driven testing, automation framework design.</p>
         </div>
 
-        <div class="card">
+        <div class="card fade-in fade-delay">
           <h3>API & Backend Testing</h3>
-          <p>Postman, Python Requests, schema validation, test data creation, REST API validation.</p>
+          <p>Postman, Python Requests, JSON schema validation, positive/negative testing.</p>
         </div>
 
-        <div class="card">
+        <div class="card fade-in fade-delay">
           <h3>Tools & DevOps</h3>
-          <p>Jira, TestRail, GitHub Actions, Docker, Jenkins.</p>
+          <p>Jira, TestRail, GitHub Actions, Docker, Jenkins, Git.</p>
         </div>
 
-        <div class="card">
+        <div class="card fade-in fade-delay">
           <h3>Programming & Databases</h3>
           <p>Python, C++, SQL, PostgreSQL.</p>
         </div>
@@ -97,111 +94,96 @@
       </div>
     </section>
 
-    <section id="projects" class="container section">
+    <!-- PROJECTS -->
+    <section id="projects" class="container section fade-in">
       <h2>Selected Projects</h2>
+
       <div class="grid">
-        <article class="project card">
+
+        <article class="card project fade-in">
           <h3>Automated Web Testing Framework</h3>
           <p>
-            Created a robust Selenium + PyTest automation framework with HTML reporting, parametrized tests,
-            and GitHub Actions CI integration.
+            Built a fully modular Selenium + PyTest automation framework with advanced reporting, parametrized tests,
+            CI integration, and clean architecture.
           </p>
           <a href="https://github.com/YOUR_GITHUB_REPO" target="_blank">View on GitHub ↗</a>
         </article>
 
-        <article class="project card">
+        <article class="card project fade-in">
           <h3>API Testing Automation</h3>
           <p>
-            Designed automated API test suite using Python Requests, schema validation,  
-            negative/positive testing, and CI gating.
+            Designed automated API validation suite using Python Requests, schema checking, error injection,
+            and continuous integration pipelines.
           </p>
           <a href="https://github.com/YOUR_GITHUB_REPO" target="_blank">View on GitHub ↗</a>
         </article>
 
-        <article class="project card">
+        <article class="card project fade-in">
           <h3>Geospatial Workflow Automation (MSc Thesis)</h3>
           <p>
             Thesis: “A Method for Enhancing the Reproducibility of Geoprocessing Workflows using Semantic Annotation”.
           </p>
         </article>
+
       </div>
     </section>
 
-    <section id="experience" class="container section">
+    <!-- EXPERIENCE -->
+    <section id="experience" class="container section fade-in">
       <h2>Experience</h2>
 
       <div class="timeline">
-        <div class="item">
+
+        <div class="item fade-in">
           <h4>Test Engineer — Gaming Laboratories International (GLI)</h4>
           <p><em>2021 — Present</em></p>
           <p>
-            Responsible for functional testing, test execution, regulatory compliance verification,
-            test documentation, and defect reporting for gaming systems and embedded devices.
+            Responsible for functional testing, hardware and software verification, test case design, compliance testing,
+            documentation, and defect reporting for regulated gaming systems.
           </p>
         </div>
 
-        <div class="item">
+        <div class="item fade-in fade-delay">
           <h4>Graduate Assistant Lecturer — Woldia University</h4>
           <p><em>2017 — 2019</em></p>
           <p>
-            Taught programming and information systems courses; supervised lab sessions and student projects.
+            Taught programming and information systems courses; supervised labs and student projects; delivered structured academic content.
           </p>
         </div>
-      </div>
 
+      </div>
     </section>
 
-    <section id="contact" class="container section">
+    <!-- CONTACT -->
+    <section id="contact" class="container section fade-in">
       <h2>Contact</h2>
 
-      <div class="contact-grid">
-        <!-- Static-site contact form → uses Formspree -->
-        <form id="contactForm"
-              action="https://formspree.io/f/YOUR_FORMSPREE_ID"
-              method="POST"
-              class="card form">
+      <div class="contact-display">
+        <p><strong>Email</strong><br> dawithaile225@gmail.com</p>
+        <p><strong>Phone</strong><br> +31 6 87 38 13 98</p>
+        <p><strong>LinkedIn</strong><br>
+          <a href="http://www.linkedin.com/in/dawit-haile-beyene" target="_blank">
+            dawit-haile-beyene
+          </a>
+        </p>
 
-          <label>
-            <span>Name</span>
-            <input type="text" name="name" required>
-          </label>
-
-          <label>
-            <span>Email</span>
-            <input type="email" name="email" required>
-          </label>
-
-          <label>
-            <span>Message</span>
-            <textarea name="message" rows="6" required></textarea>
-          </label>
-
-          <input type="hidden" name="_subject" value="New Portfolio Contact Request">
-
-          <button type="submit" class="btn">Send Message</button>
-        </form>
-
-        <div class="card">
-          <h4>Or reach me directly</h4>
-          <p><strong>Email</strong><br>dawithaile225@gmail.com</p>
-          <p><strong>Phone</strong><br>+31 6 87 38 13 98</p>
-
-          <p><strong>CVs</strong><br>
-            <a href="/mnt/data/CV - Dawit Beyene.pdf" target="_blank">CV - Dawit Beyene.pdf</a><br>
-            <a href="/mnt/data/Dawit - CV.pdf" target="_blank">Dawit - CV.pdf</a>
-          </p>
-        </div>
+        <p><strong>CV Downloads</strong><br>
+          <a href="/mnt/data/CV - Dawit Beyene.pdf" target="_blank">CV - Dawit Beyene.pdf</a><br>
+          <a href="/mnt/data/Dawit - CV.pdf" target="_blank">Dawit - CV.pdf</a>
+        </p>
       </div>
+
     </section>
 
   </main>
 
-  <footer class="site-footer">
+  <footer class="site-footer fade-in">
     <div class="container">
       <p>© 2025 Dawit Beyene — Test Engineering Portfolio</p>
     </div>
   </footer>
 
   <script src="contact.js"></script>
+
 </body>
 </html>
