--- a/index.html
+++ b/index.html
@@ -4,186 +4,193 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dawit Beyene — Test Engineer & Test Analyst</title>
+  <meta name="description" content="Dawit Beyene — ISTQB Advanced Test Analyst. Test automation, API testing, CI/CD.">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
-  <!-- HERO -->
-  <header class="hero fade-in">
-    <div class="container">
-      <div class="hero-left">
-        <h1>Dawit Beyene</h1>
-        <p class="sub">Senior Test Engineer • ISTQB Advanced Test Analyst</p>
-
-        <p class="summary">
-          ISTQB <strong>Advanced Level Test Analyst</strong> certified Test Engineer with extensive experience in
-          functional testing, test design techniques, automation, API validation, and end-to-end quality processes.
-          Skilled in Selenium, Playwright, PyTest, risk-based testing, and CI/CD automation. Passionate about delivering
-          reliable, compliant, and high-quality software.
-        </p>
-
-        <div class="cta">
-          <a class="btn" href="/mnt/data/CV - Dawit Beyene.pdf" target="_blank">Download CV</a>
-          <a class="btn ghost" href="#projects">View Projects</a>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- NAV -->
-  <nav class="sticky">
-    <div class="container nav-inner">
-      <a class="logo" href="#">Dawit</a>
-      <div class="links">
+  <header class="topbar">
+    <div class="wrap">
+      <a class="brand" href="#">Dawit Beyene</a>
+      <nav class="nav">
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
-      </div>
+        <a class="mono" href="https://github.com/YOUR_GITHUB" target="_blank" rel="noopener">GitHub ↗</a>
+      </nav>
     </div>
-  </nav>
+  </header>
 
   <main>
+    <!-- HERO -->
+    <section class="hero">
+      <div class="wrap hero-grid">
+        <div class="hero-left">
+          <h1 class="title">Dawit Beyene</h1>
+          <p class="eyebrow">ISTQB Advanced Test Analyst • Senior Test Engineer</p>
+          <p class="lead">
+            I build dependable test frameworks and clear, repeatable test strategies for regulated systems and web platforms.
+            Focused on automation, API testing, risk-based analysis and CI/CD integration.
+          </p>
 
-    <!-- ABOUT -->
-    <section id="about" class="container section fade-in">
-      <h2>About</h2>
-      <p>
-        I am a detail-oriented Test Engineer with ISTQB Advanced Level Test Analyst certification. I specialize in
-        functional testing, test design, risk-based testing, automation development, and test documentation. I have
-        strong experience testing gaming systems, embedded platforms, and web applications using both manual and automated approaches.  
-        MSc in Geoinformatics and BSc in Computer Science.
-      </p>
+          <div class="actions">
+            <a class="primary" href="/mnt/data/CV - Dawit Beyene.pdf" target="_blank" rel="noopener">Download CV</a>
+            <a class="secondary" href="/mnt/data/Dawit - CV.pdf" target="_blank" rel="noopener">Alternate CV</a>
+            <a class="link" href="#projects">View Projects</a>
+          </div>
+        </div>
+
+        <aside class="hero-right card quiet">
+          <p class="muted">Contact</p>
+          <p class="strong">dawithaile225@gmail.com</p>
+          <p class="muted">Phone</p>
+          <p class="strong">+31 6 87 38 13 98</p>
+          <p class="muted">Location</p>
+          <p>Velsen-Noord, Netherlands</p>
+          <div class="badges">
+            <span class="badge">ISTQB Advanced</span>
+            <span class="badge">MSc Geoinformatics</span>
+          </div>
+        </aside>
+      </div>
     </section>
 
-    <!-- SKILLS -->
-    <section id="skills" class="container section fade-in">
-      <h2>Core Skills</h2>
-      <div class="grid">
-
-        <div class="card fade-in">
-          <h3>Advanced Testing Expertise</h3>
-          <p>
-            ISTQB Advanced Test Analyst, black-box techniques, test design, requirement analysis,
-            defect classification, quality risk assessment.
+    <!-- ABOUT -->
+    <section id="about" class="section wrap">
+      <div class="cols">
+        <div>
+          <h2>About</h2>
+          <p class="muted">
+            Detail-oriented test engineer with strong background in test analysis, automation, API & backend validation,
+            and compliance verification for gaming and embedded systems. I combine systematic test design with pragmatic
+            automation to reduce risk and increase release confidence.
           </p>
         </div>
 
-        <div class="card fade-in fade-delay">
-          <h3>Test Automation</h3>
-          <p>Selenium, Playwright, PyTest, data-driven testing, automation framework design.</p>
+        <div class="mini card">
+          <h3>Core focus</h3>
+          <ul>
+            <li>Risk-based testing & test design</li>
+            <li>Automation frameworks (Selenium / Playwright / PyTest)</li>
+            <li>API validation & schema testing</li>
+            <li>CI/CD pipelines & GitHub Actions</li>
+          </ul>
         </div>
+      </div>
+    </section>
 
-        <div class="card fade-in fade-delay">
-          <h3>API & Backend Testing</h3>
-          <p>Postman, Python Requests, JSON schema validation, positive/negative testing.</p>
+    <!-- SKILLS -->
+    <section id="skills" class="section alt">
+      <div class="wrap">
+        <h2>Skills</h2>
+        <div class="skill-grid">
+          <div class="skill card">
+            <h4>Testing</h4>
+            <p>Advanced test analysis, black-box techniques, requirement mapping, test coverage & traceability.</p>
+          </div>
+          <div class="skill card">
+            <h4>Automation</h4>
+            <p>Selenium, Playwright, PyTest, modular frameworks, reporting and data-driven suites.</p>
+          </div>
+          <div class="skill card">
+            <h4>API & Backend</h4>
+            <p>Postman, Python Requests, JSON Schema, contract testing and negative-case validation.</p>
+          </div>
+          <div class="skill card">
+            <h4>DevOps</h4>
+            <p>GitHub Actions, Docker, Jenkins — CI gating, nightly regression, deploy validations.</p>
+          </div>
         </div>
-
-        <div class="card fade-in fade-delay">
-          <h3>Tools & DevOps</h3>
-          <p>Jira, TestRail, GitHub Actions, Docker, Jenkins, Git.</p>
-        </div>
-
-        <div class="card fade-in fade-delay">
-          <h3>Programming & Databases</h3>
-          <p>Python, C++, SQL, PostgreSQL.</p>
-        </div>
-
       </div>
     </section>
 
     <!-- PROJECTS -->
-    <section id="projects" class="container section fade-in">
-      <h2>Selected Projects</h2>
+    <section id="projects" class="section">
+      <div class="wrap">
+        <h2>Selected projects</h2>
 
-      <div class="grid">
+        <div class="projects">
+          <article class="project card">
+            <h3>Modular Automation Framework</h3>
+            <p class="muted">Selenium + PyTest framework with parametrization, parallel execution and HTML reporting. Integrated with GitHub Actions for nightly regressions.</p>
+            <a class="small-link" href="https://github.com/YOUR_GITHUB/YOUR_REPO" target="_blank" rel="noopener">View repo ↗</a>
+          </article>
 
-        <article class="card project fade-in">
-          <h3>Automated Web Testing Framework</h3>
-          <p>
-            Built a fully modular Selenium + PyTest automation framework with advanced reporting, parametrized tests,
-            CI integration, and clean architecture.
-          </p>
-          <a href="https://github.com/YOUR_GITHUB_REPO" target="_blank">View on GitHub ↗</a>
-        </article>
+          <article class="project card">
+            <h3>API Contract & Schema Testing</h3>
+            <p class="muted">Automated schema checks, negative testing, and performance smoke checks. Gated in CI to prevent regressions.</p>
+            <a class="small-link" href="https://github.com/YOUR_GITHUB/YOUR_REPO" target="_blank" rel="noopener">View repo ↗</a>
+          </article>
 
-        <article class="card project fade-in">
-          <h3>API Testing Automation</h3>
-          <p>
-            Designed automated API validation suite using Python Requests, schema checking, error injection,
-            and continuous integration pipelines.
-          </p>
-          <a href="https://github.com/YOUR_GITHUB_REPO" target="_blank">View on GitHub ↗</a>
-        </article>
-
-        <article class="card project fade-in">
-          <h3>Geospatial Workflow Automation (MSc Thesis)</h3>
-          <p>
-            Thesis: “A Method for Enhancing the Reproducibility of Geoprocessing Workflows using Semantic Annotation”.
-          </p>
-        </article>
-
+          <article class="project card">
+            <h3>Geospatial Reproducibility (MSc)</h3>
+            <p class="muted">Thesis work on reproducible geoprocessing workflows using semantic metadata and reproducible pipelines.</p>
+            <a class="small-link" href="#" target="_blank" rel="noopener">Read summary</a>
+          </article>
+        </div>
       </div>
     </section>
 
     <!-- EXPERIENCE -->
-    <section id="experience" class="container section fade-in">
-      <h2>Experience</h2>
+    <section id="experience" class="section alt">
+      <div class="wrap">
+        <h2>Experience</h2>
+        <div class="timeline card">
+          <div class="row">
+            <div class="role">
+              <h4>Test Engineer — Gaming Laboratories International (GLI)</h4>
+              <p class="muted">2021 — Present</p>
+            </div>
+            <div class="desc muted">
+              Test planning and execution for gaming systems; hardware/software verification; compliance testing; automation and regression suites.
+            </div>
+          </div>
 
-      <div class="timeline">
-
-        <div class="item fade-in">
-          <h4>Test Engineer — Gaming Laboratories International (GLI)</h4>
-          <p><em>2021 — Present</em></p>
-          <p>
-            Responsible for functional testing, hardware and software verification, test case design, compliance testing,
-            documentation, and defect reporting for regulated gaming systems.
-          </p>
+          <div class="row">
+            <div class="role">
+              <h4>Graduate Assistant Lecturer — Woldia University</h4>
+              <p class="muted">2017 — 2019</p>
+            </div>
+            <div class="desc muted">
+              Lectured programming & systems courses; supervised projects and lab sessions.
+            </div>
+          </div>
         </div>
-
-        <div class="item fade-in fade-delay">
-          <h4>Graduate Assistant Lecturer — Woldia University</h4>
-          <p><em>2017 — 2019</em></p>
-          <p>
-            Taught programming and information systems courses; supervised labs and student projects; delivered structured academic content.
-          </p>
-        </div>
-
       </div>
     </section>
 
     <!-- CONTACT -->
-    <section id="contact" class="container section fade-in">
-      <h2>Contact</h2>
+    <section id="contact" class="section">
+      <div class="wrap">
+        <h2>Contact</h2>
+        <div class="contact-grid">
+          <div class="card">
+            <h3>Quick contact</h3>
+            <p>Email: <a href="mailto:dawithaile225@gmail.com">dawithaile225@gmail.com</a></p>
+            <p>Phone: <a href="tel:+31687381398">+31 6 87 38 13 98</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/dawit-haile-beyene" target="_blank" rel="noopener">dawit-haile-beyene</a></p>
+          </div>
 
-      <div class="contact-display">
-        <p><strong>Email</strong><br> dawithaile225@gmail.com</p>
-        <p><strong>Phone</strong><br> +31 6 87 38 13 98</p>
-        <p><strong>LinkedIn</strong><br>
-          <a href="http://www.linkedin.com/in/dawit-haile-beyene" target="_blank">
-            dawit-haile-beyene
-          </a>
-        </p>
-
-        <p><strong>CV Downloads</strong><br>
-          <a href="/mnt/data/CV - Dawit Beyene.pdf" target="_blank">CV - Dawit Beyene.pdf</a><br>
-          <a href="/mnt/data/Dawit - CV.pdf" target="_blank">Dawit - CV.pdf</a>
-        </p>
+          <aside class="card quiet">
+            <h4>Download CVs</h4>
+            <p><a href="/mnt/data/CV - Dawit Beyene.pdf" target="_blank" rel="noopener">CV — Dawit Beyene</a></p>
+            <p><a href="/mnt/data/Dawit - CV.pdf" target="_blank" rel="noopener">CV — Dawit</a></p>
+          </aside>
+        </div>
       </div>
-
     </section>
 
   </main>
 
-  <footer class="site-footer fade-in">
-    <div class="container">
-      <p>© 2025 Dawit Beyene — Test Engineering Portfolio</p>
+  <footer class="footer quiet">
+    <div class="wrap">
+      <div class="foot-left">© 2025 Dawit Beyene</div>
+      <div class="foot-right muted">Built for GitHub Pages • Static • ISTQB Advanced</div>
     </div>
   </footer>
 
   <script src="contact.js"></script>
-
 </body>
 </html>
