--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#projects">Projects</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
-        <a class="mono" href="https://github.com/YOUR_GITHUB" target="_blank" rel="noopener">GitHub ↗</a>
+
       </nav>
     </div>
   </header>
@@ -29,7 +29,7 @@
       <div class="wrap hero-grid">
         <div class="hero-left">
           <h1 class="title">Dawit Beyene</h1>
-          <p class="eyebrow">ISTQB Advanced Test Analyst • Senior Test Engineer</p>
+          <p class="eyebrow">ISTQB Advanced Test Analyst • Test Engineer</p>
           <p class="lead">
             I build dependable test frameworks and clear, repeatable test strategies for regulated systems and web platforms.
             Focused on automation, API testing, risk-based analysis and CI/CD integration.
@@ -173,11 +173,7 @@
             <p>LinkedIn: <a href="https://www.linkedin.com/in/dawit-haile-beyene" target="_blank" rel="noopener">dawit-haile-beyene</a></p>
           </div>
 
-          <aside class="card quiet">
-            <h4>Download CVs</h4>
-            <p><a href="/mnt/data/CV - Dawit Beyene.pdf" target="_blank" rel="noopener">CV — Dawit Beyene</a></p>
-            <p><a href="/mnt/data/Dawit - CV.pdf" target="_blank" rel="noopener">CV — Dawit</a></p>
-          </aside>
+          
         </div>
       </div>
     </section>
@@ -193,4 +189,5 @@
   <script src="contact.js"></script>
 </body>
 </html>
+
 
