--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- Sticky Navigation Bar -->
     <header class="sticky top-0 z-50 bg-gray-900/90 backdrop-blur-sm border-b border-gray-700 shadow-xl">
         <div class="content-container mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center h-16">
-            <!-- UPDATED: Changed D<span class="text-blue-500">B</span>. to full name -->
+            <!-- Navigation Logo -->
             <a href="#hero" class="text-xl font-extrabold text-white tracking-wider">
                 Dawit <span class="text-blue-500">Beyene</span>
             </a>
@@ -258,8 +258,9 @@
                 <div class="space-y-12">
                     
                     <!-- Item 1: GLI Europe B.V. (Left/Right Layout) -->
-                    <div class="relative timeline-item flex md:justify-start justify-end w-full">
-                        <div class="md:w-1/2 md:pr-12 w-full">
+                    <!-- FIX: Added pl-12 (padding-left: 3rem) to the content wrapper on mobile to ensure the date text clears the timeline axis. Removed unnecessary mobile justify class from flex. -->
+                    <div class="relative timeline-item flex w-full md:justify-start">
+                        <div class="md:w-1/2 md:pr-12 w-full pl-12">
                             <div class="bg-gray-800 p-6 rounded-2xl border border-gray-700 shadow-xl transition hover:shadow-blue-500/20">
                                 <p class="text-sm text-blue-400 font-semibold mb-1">2021 – Present</p>
                                 <h3 class="text-xl font-bold text-white">Test Engineer</h3>
@@ -281,8 +282,9 @@
                     </div>
 
                     <!-- Item 2: University of Twente -->
-                    <div class="relative timeline-item flex md:justify-end justify-end w-full">
-                        <div class="md:w-1/2 md:pl-12 md:order-2 w-full">
+                    <!-- FIX: Added pl-12 (padding-left: 3rem) to the content wrapper on mobile to ensure the date text clears the timeline axis. Removed unnecessary mobile justify class from flex. -->
+                    <div class="relative timeline-item flex w-full md:justify-end">
+                        <div class="md:w-1/2 md:pl-12 md:order-2 w-full pl-12">
                              <div class="bg-gray-800 p-6 rounded-2xl border border-gray-700 shadow-xl transition hover:shadow-blue-500/20">
                                 <p class="text-sm text-blue-400 font-semibold mb-1">2019 – 2021</p>
                                 <h3 class="text-xl font-bold text-white">MSc Geoinformatics</h3>
@@ -294,8 +296,9 @@
                     </div>
                     
                     <!-- Item 3: Woldia University -->
-                    <div class="relative timeline-item flex md:justify-start justify-end w-full">
-                        <div class="md:w-1/2 md:pr-12 w-full">
+                    <!-- FIX: Added pl-12 (padding-left: 3rem) to the content wrapper on mobile to ensure the date text clears the timeline axis. Removed unnecessary mobile justify class from flex. -->
+                    <div class="relative timeline-item flex w-full md:justify-start">
+                        <div class="md:w-1/2 md:pr-12 w-full pl-12">
                             <div class="bg-gray-800 p-6 rounded-2xl border border-gray-700 shadow-xl transition hover:shadow-blue-500/20">
                                 <p class="text-sm text-blue-400 font-semibold mb-1">2017 – 2019</p>
                                 <h3 class="text-xl font-bold text-white">Graduate Assistant Lecturer</h3>
@@ -307,8 +310,9 @@
                     </div>
 
                     <!-- Item 4: Hawassa University -->
-                    <div class="relative timeline-item flex md:justify-end justify-end w-full">
-                        <div class="md:w-1/2 md:pl-12 md:order-2 w-full">
+                    <!-- FIX: Added pl-12 (padding-left: 3rem) to the content wrapper on mobile to ensure the date text clears the timeline axis. Removed unnecessary mobile justify class from flex. -->
+                    <div class="relative timeline-item flex w-full md:justify-end">
+                        <div class="md:w-1/2 md:pl-12 md:order-2 w-full pl-12">
                             <div class="bg-gray-800 p-6 rounded-2xl border border-gray-700 shadow-xl transition hover:shadow-blue-500/20">
                                 <p class="text-sm text-blue-400 font-semibold mb-1">2013 – 2017</p>
                                 <h3 class="text-xl font-bold text-white">BSc Computer Science</h3>
