--- a/index.html
+++ b/index.html
@@ -217,22 +217,22 @@
             
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
                 
-                <div class="bg-gray-800 p-6 rounded-2xl border border-gray-700 shadow-xl hover:border-blue-500 transition duration-300">
+                  <div class="bg-gray-800 p-6 rounded-2xl border border-gray-700 shadow-xl hover:border-blue-500 transition duration-300">
                     <div class="flex items-center mb-3">
-                        <i data-lucide="zap" class="w-6 h-6 text-yellow-400 mr-2"></i>
-                        <span class="text-sm font-medium text-yellow-400">Automation</span>
+                        <i data-lucide="clipboard-list" class="w-6 h-6 text-yellow-400 mr-2"></i>
+                        <span class="text-sm font-medium text-yellow-400">Methodology</span>
                     </div>
-                    <h3 class="text-xl font-semibold text-white mb-2">Modular Automation Framework</h3>
-                    <p class="text-gray-400">Designed and implemented a scalable, reusable Selenium/PyTest framework integrated with CI pipelines for continuous regression and rapid feature validation across multiple environments.</p>
+                    <h3 class="text-xl font-semibold text-white mb-2">Strategic Compliance Testing</h3>
+                    <p class="text-gray-400">Architected comprehensive test strategies for high-stakes gaming ecosystems, ensuring 100% alignment between complex hardware specifications and international regulatory requirements.</p>
                 </div>
 
                 <div class="bg-gray-800 p-6 rounded-2xl border border-gray-700 shadow-xl hover:border-blue-500 transition duration-300">
                     <div class="flex items-center mb-3">
-                        <i data-lucide="database" class="w-6 h-6 text-red-400 mr-2"></i>
-                        <span class="text-sm font-medium text-red-400">API Testing</span>
+                        <i data-lucide="terminal" class="w-6 h-6 text-red-400 mr-2"></i>
+                        <span class="text-sm font-medium text-red-400">Validation</span>
                     </div>
-                    <h3 class="text-xl font-semibold text-white mb-2">API Contract and Schema Testing</h3>
-                    <p class="text-gray-400">Developed a comprehensive suite using Python Requests and Postman to enforce API contract integrity, focusing on robust data validation, security checks, and error handling for critical systems.</p>
+                    <h3 class="text-xl font-semibold text-white mb-2">System Integration Validation</h3>
+                    <p class="text-gray-400">Engineered validation workflows using Python scripting and SQL to verify data integrity and secure communication between embedded gaming hardware and backend control systems.</p>
                 </div>
 
                 <div class="bg-gray-800 p-6 rounded-2xl border border-gray-700 shadow-xl hover:border-blue-500 transition duration-300">
@@ -466,4 +466,5 @@
     </script>
 </body>
 </html>
+
 
