--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         <span class="text-sm font-medium text-red-400">Validation</span>
                     </div>
                     <h3 class="text-xl font-semibold text-white mb-2">System Integration Validation</h3>
-                    <p class="text-gray-400">Engineered validation workflows using Python scripting and SQL to verify data integrity and secure communication between embedded gaming hardware and backend control systems.</p>
+                    <p class="text-gray-400">Engineered validation workflows using Python scripting and SQL to verify data integrity and secure communication between embedded hardware and backend control systems.</p>
                 </div>
 
                 <div class="bg-gray-800 p-6 rounded-2xl border border-gray-700 shadow-xl hover:border-blue-500 transition duration-300">
@@ -466,5 +466,6 @@
     </script>
 </body>
 </html>
+
 
 
